--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,3 @@
 * linguist-vendored
-*.js linguist-vendored=false
-*.html linguist-vendored=false
+*.py linguist-vendored=false
+*.ipynb linguist-vendored=false
